force-app/main/default/objects/EDQ_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting used to control certain features of Experian data validation</description>
    <fields>
        <fullName>Email_Validation_Show_Generic_Error__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show generic error message from Experian Email Validation Generic Error Message custom label</description>
        <inlineHelpText>Show generic error message from Experian Email Validation Generic Error Message custom label</inlineHelpText>
        <label>Email Validation Show Generic Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Address_Suggestions__c</fullName>
        <defaultValue>7</defaultValue>
        <description>The maximum number of suggestions a search request should return</description>
        <inlineHelpText>The maximum number of suggestions a search request should return</inlineHelpText>
        <label>Max Address Suggestions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Validation_Show_Generic_Error__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show generic error message from Experian Phone Validation Generic Error Message custom label</description>
        <inlineHelpText>Show generic error message from Experian Phone Validation Generic Error Message custom label</inlineHelpText>
        <label>Phone Validation Show Generic Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Countries__c</fullName>
        <defaultValue>&quot;AUSTRALIA,CHINA,INDIA,ITALY,MALAYSIA,SOUTH AFRICA&quot;</defaultValue>
        <description>Countries to appear at the top of the picklist.</description>
        <inlineHelpText>Countries to appear at the top of the picklist.</inlineHelpText>
        <label>Top Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EDQ Settings</label>
</CustomObject>